--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.4
+async-timeout==5.0.1
 attrs==25.1.0
 babel==2.17.0
 beautifulsoup4==4.13.3
@@ -22,6 +23,8 @@ decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
 einops==0.8.0
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.17.0
@@ -86,6 +89,7 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+openpyxl==3.1.5
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -118,7 +122,6 @@ safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.13.1
 Send2Trash==1.8.3
-setuptools==75.8.0
 six==1.17.0
 smart-open==7.1.0
 sniffio==1.3.1
@@ -129,6 +132,7 @@ terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tokenizers==0.21.0
+tomli==2.2.1
 torch==2.6.0
 torchaudio==2.6.0
 torchvision==0.21.0
