1) Update .gitignore to include .env and *.gguf files. 2) Change model reference in inference_configs.yaml to "NousResearch/DeepHermes-3-Mistral-24B-Preview". 3) Enhance sample_annotations.py with additional examples and outputs for fallacy detection. 4) Introduce new script vllm_deep_hermes3-24b.sh for serving the updated model, while removing the deprecated vllm_hermes3.sh script.

--- a/inference_pipelines/inference_configs.yaml
+++ b/inference_pipelines/inference_configs.yaml
@@ -12,7 +12,7 @@ data_annotation:
   inference_client_type: vllm
   inference_client:
     vllm:
-      model: "NousResearch/Hermes-3-Llama-3.2-3B"
+      model: "NousResearch/DeepHermes-3-Mistral-24B-Preview"
       service_url: "http://localhost:42003/v1"
       api_key: vLLM_API_KEY
     batch_inference_creation: # creates a jsonl file to be submitted to OpenAI Batch API from the Dataset at dataset_path.
